Update and rename 2022-11-18-changhwan.md to 2022-11-18-changhwan1.md

--- a/_posts/Flutter/2022-11-18-changhwan1.md
+++ b/_posts/Flutter/2022-11-18-changhwan1.md
@@ -2,13 +2,13 @@
 layout: single
 categories:
   - 플러터
-title: Code의 질 높이기
+title: 리팩토링 (REFACTORING)
 date: 2022-11-18
 toc: true
 comments : true
 ---
 
-## FEEDBACK : Code의 질 높이기
+## FEEDBACK : 리팩토링 (REFACTORING)
 
 - 저번 멘토링 때 예슬이와 석현이가 짠 코드들의 로직을 보고 내 코드의 질이 낮다는 걸 느낌.
 - 뿐만 아니라 대표님이 올려주신 영상 속 음성을 들었는데, 팀마다 코드를 짜는 스타일이 있다고 하셨다.
